--- a/index.html
+++ b/index.html
@@ -1985,11 +1985,65 @@ function drawPlayerEntity(pl){
     CTX.beginPath(); CTX.arc(x, y, 16, 0, Math.PI*2); CTX.fill(); CTX.restore();
   }
 
-  if(pl.powerTimer > 0){
-    const r=12+(Math.sin(performance.now()/120)+1)*6;
-    CTX.beginPath(); CTX.arc(x,y,r,0,Math.PI*2);
-    CTX.lineWidth=2; CTX.strokeStyle='rgba(255,255,255,0.55)'; CTX.stroke();
+  if (pl.powerTimer > 0) {
+  if (pl.species.id === 'cornucopioides' && pl.invisible) {
+    // --- Halo noir épais, pulsant, façon encre ---
+    const t = performance.now();
+    const baseR = 22;
+    const pulse = 4 * Math.sin(t / 180);
+    const R = baseR + pulse;
+
+    // Dégradé radial noir -> transparent
+    const g = CTX.createRadialGradient(x, y, R * 0.15, x, y, R * 1.3);
+    g.addColorStop(0.00, 'rgba(0,0,0,0.90)');
+    g.addColorStop(0.55, 'rgba(0,0,0,0.70)');
+    g.addColorStop(1.00, 'rgba(0,0,0,0.00)');
+
+    CTX.save();
+    // Multiplie légèrement l’assombrissement pour un rendu « encre »
+    CTX.globalCompositeOperation = 'multiply';
+    CTX.fillStyle = g;
+    CTX.beginPath();
+    CTX.arc(x, y, R * 1.25, 0, Math.PI * 2);
+    CTX.fill();
+
+    // Petites « taches » qui tournent doucement pour l’organique
+    for (let i = 0; i < 4; i++) {
+      const ang = (t / 520) + i * (Math.PI / 2);
+      const ox = Math.cos(ang) * 6;
+      const oy = Math.sin(ang) * 4;
+      const r2 = R * 0.55;
+      const g2 = CTX.createRadialGradient(x+ox, y+oy, r2 * 0.1, x+ox, y+oy, r2);
+      g2.addColorStop(0.00, 'rgba(0,0,0,0.80)');
+      g2.addColorStop(1.00, 'rgba(0,0,0,0.00)');
+      CTX.beginPath();
+      CTX.fillStyle = g2;
+      CTX.arc(x + ox, y + oy, r2, 0, Math.PI * 2);
+      CTX.fill();
+    }
+    CTX.restore();
+
+    // --- Compte à rebours en secondes, minuscule, blanc, lisible ---
+    const secs = Math.max(0, Math.ceil(pl.powerTimer / 60));
+    CTX.save();
+    CTX.font = '10px system-ui';
+    CTX.textAlign = 'center';
+    CTX.textBaseline = 'middle';
+    // Liseré noir pour la lisibilité dans l’encre animée
+    CTX.lineWidth = 3;
+    CTX.strokeStyle = 'rgba(0,0,0,0.85)';
+    CTX.strokeText(String(secs), x, y);
+    CTX.fillStyle = '#ffffff';
+    CTX.fillText(String(secs), x, y);
+    CTX.restore();
+  } else {
+    // Aura par défaut pour les autres pouvoirs
+    const r = 12 + (Math.sin(performance.now() / 120) + 1) * 6;
+    CTX.beginPath(); CTX.arc(x, y, r, 0, Math.PI * 2);
+    CTX.lineWidth = 2; CTX.strokeStyle = 'rgba(255,255,255,0.55)'; CTX.stroke();
   }
+}
+
 
   if(pl.respawnFlash > 0){
     const t=performance.now()/120;
